// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardHeaderYotpoBadge/> render() should render children 1`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
  <span
    class="children"
  >
    <p>
      foo
    </p>
    <p>
      bar
    </p>
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should render with material icons 1`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    visibilty
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should render with material icons 2`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    visibilty_off
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should render with material icons 3`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should support css class injection 1`] = `
<span
  class="custom-css-class container primary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should support no children 1`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should support primary color 1`] = `
<span
  class=" container primary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
  <span
    class="children"
  >
    <p>
      foo
    </p>
    <p>
      bar
    </p>
  </span>
</span>
`;

exports[`<CardHeaderYotpoBadge/> render() should support primary color 2`] = `
<span
  class=" container secondary"
>
  <span
    class="material-icons icon"
  >
    star
  </span>
  <span
    class="children"
  >
    <p>
      foo
    </p>
    <p>
      bar
    </p>
  </span>
</span>
`;
